<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="programTraining"
            type="ru.codingworkshop.gymm.data.entity.ProgramTraining" />

        <variable
            name="inActionMode"
            type="android.databinding.ObservableBoolean" />

        <import type="android.view.View" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.program.training.ProgramTrainingFragment">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false"
                app:toolbarId="@+id/programTrainingToolbar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/programTrainingToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="?attr/homeAsUpIndicator" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/programTrainingNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="72dp"
                    android:layout_marginTop="?attr/actionBarSize"
                    android:visibility="@{inActionMode ? View.GONE : View.VISIBLE}"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/programTrainingName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/program_training_activity_name_hint"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@={programTraining.name}"
                        android:textSize="24sp"
                        tools:text="Very very long capture is here" />
                </android.support.design.widget.TextInputLayout>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/programTrainingBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:drawableTop="@{@drawable/ic_fitness_200dp}"
            android:text="@string/program_training_activity_empty_list"
            app:layout_anchor="@+id/programExerciseList"
            app:layout_anchorGravity="center" />

        <ru.codingworkshop.gymm.ui.program.common.ProgramRecyclerView
            android:id="@+id/programExerciseList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="96dp"
            android:scrollbars="vertical"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/programTrainingAddExerciseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            android:focusable="true"
            android:visibility="@{inActionMode ? View.GONE : View.VISIBLE}"
            app:srcCompat="@drawable/ic_add_24dp" />

    </android.support.design.widget.CoordinatorLayout>
</layout>