<resources>
    <string name="app_name">Gymm</string>
    <!-- service -->
    <string name="time_service_description">Служба, позволяющая следить за временем тренировки.</string>

    <!-- main activity -->
    <!-- menu -->
    <string name="main_activity_menu_add_program_title">Добавить программу тренировки</string>
    <string name="main_activity_menu_show_statistics_title">Показать статистику тренировок</string>

    <!-- program training activity -->
    <string name="program_training_activity_title">Тренировка</string>
    <!-- layout items -->
    <string name="program_training_activity_name_hint">Название тренировки</string>
    <string name="program_training_activity_name_empty_error">У тренировки должно быть название</string>
    <string name="program_training_activity_name_duplicate_error">Тренировка с таким названием уже есть</string>
    <string name="program_training_activity_weekday_label">День недели (необязательно)</string>
    <string name="program_training_activity_exercises_label">Упражнения</string>
    <string name="program_training_activity_add_exercise">Добавить упражнение</string>
    <string name="program_training_activity_empty_list">Вы ещё не добавили упражнения</string>
    <string name="program_training_activity_not_selected">не выбрано</string>
    <string name="program_training_activity_exercise_deleted_message">Упражнение удалено</string>
    <!-- error dialog -->
    <string name="program_training_activity_empty_list_dialog_message">Добавьте хотя бы одно упражнение</string>
    <!-- menu -->
    <string name="program_training_activity_menu_done">Сохранить</string>

    <!-- program exercise activity -->
    <string name="program_exercise_activity_title">Упражнение</string>
    <!-- layout items -->
    <string name="program_exercise_activity_rest_time_minutes_label">Минуты</string>
    <string name="program_exercise_activity_rest_time_seconds_label">Секунды</string>
    <string name="program_exercise_activity_empty_list">Вы ещё не добавили подходы</string>
    <string name="program_exercise_activity_rest_time_not_set">не задано</string>
    <string name="program_exercise_activity_set_deleted_message">Подход удалён</string>
    <string name="program_exercise_activity_exercise_empty_text">Выберите упражнение</string>
    <!-- error dialog -->
    <string name="program_exercise_activity_empty_list_dialog_message">Добавьте хотя бы один подход</string>
    <string name="program_exercise_activity_exercise_not_selected_message">Выберите упражнение</string>
    <!-- exercise's reps and rest time input dialog -->
    <string name="program_exercise_activity_dialog_title">Добавление подхода</string>
    <string name="program_exercise_activity_dialog_title_edit">Изменение подхода</string>
    <string name="program_exercise_activity_dialog_rest_time_label">Время на отдых</string>

    <!-- program picker muscles activity -->
    <string name="muscles_activity_title">Группы мышц</string>
    <string name="muscles_activity_anterior">Спереди</string>
    <string name="muscles_activity_posterior">Сзади</string>
    <!-- program picker exercises sheet -->
    <string name="exercises_picker_activity_title">Выберите упражнение</string>
    <string name="exercises_picker_activity_primary">Основные</string>
    <string name="exercises_picker_activity_secondary">С задействованием</string>

    <!-- actual training activity -->
    <string name="actual_training_activity_stepper_item_finish_set">Завершить подход</string>
    <string name="actual_training_activity_stepper_item_edit_set">Изменить подход</string>
    <string name="actual_training_activity_stepper_item_reps_error">введите количество повторений</string>
    <string name="actual_training_activity_stepper_item_weight_error">введите вес</string>
    <string name="actual_training_activity_are_you_sure_message">Завершить тренировку?</string>

    <!-- statistics activity -->
    <string name="statistics_activity_title">Статистика</string>

    <string name="statistics_activity_plot_tab">Графики</string>
    <string name="statistics_activity_data_spinner_label">Данные</string>
    <string name="statistics_activity_period_spinner_label">Период</string>
    <string name="statistics_activity_exercise_spinner_label">Упражнение</string>
    <string name="statistics_activity_empty_plot_text">Нет данных для отображения</string>

    <string name="statistics_activity_journal_tab">Журнал</string>
    <string name="statistics_activity_journal_date_and_time_label">Дата и время</string>
    <string name="statistics_activity_journal_name_label">Тренировка</string>
    <string name="statistics_activity_journal_duration_label">Длительность</string>
    <string name="statistics_activity_journal_comment_label">Комментарий</string>
    <string name="statistics_activity_journal_volume">Объём (повторение * вес)</string>

    <!-- exercise info activity -->
    <string name="exercise_info_difficulty">Сложность</string>
    <string name="exercise_info_video_not_exists">Нет видео для данного упражнения</string>
    <string name="exericse_info_video_loading_error">Ошибка загрузки видео</string>

    <!-- notification -->
    <string name="notification_time_till_rest_finish">Время до конца отдыха: </string>
    <string name="notification_rest_finished">Пора продолжить тренировку!</string>

    <!-- common -->
    <string name="bullet" translatable="false">•</string>
    <string name="colon" translatable="false">:</string>
    <string name="reps">Повторения</string>
    <string name="set">Подход</string>
    <string name="weight">Вес</string>
    <string name="yes_button_text">Да</string>
    <string name="no_button_text">Нет</string>
    <string name="save_button_text">Сохранить</string>
    <string name="delete_button_text">Удалить</string>
    <string name="edit_button_text">Изменить</string>
    <string name="start_button_text">Начать</string>
    <string name="cancel_changes_question">Выйти без сохранения?</string>
    <string name="add_button_text">Добавить</string>
    <string name="select_button_text">Выбрать</string>
    <string name="out_of">из</string>
    <string name="sum">Сумма</string>

    <plurals name="number_of_reps">
        <item quantity="one">%d повторение</item>
        <item quantity="few">%d повторения</item>
        <item quantity="other">%d повторений</item>
    </plurals>

    <plurals name="number_of_sets">
        <item quantity="one">%d подход</item>
        <item quantity="many">%d подхода</item>
        <item quantity="other">%d подходов</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="other">%d минут</item>
    </plurals>

    <plurals name="seconds">
        <item quantity="one">%d секунда</item>
        <item quantity="few">%d секунды</item>
        <item quantity="other">%d секунд</item>
    </plurals>
</resources>
